# otus1.2

./: CMakeLists.txt  README.md  ip.cpp  ip.h  main.cpp  test_ip.cpp
.github/workflows/: release.yml
